--- a/package.json
+++ b/package.json
@@ -15,12 +15,11 @@
     "docker:restart": "npm run docker:down && npm run docker:up"
   },
   "dependencies": {
-    "socket.io": "^4.7.5",
-    "socket.io-client": "^4.7.5",
     "@tailwindcss/postcss": "^4.1.7",
     "@types/ioredis": "^4.28.10",
     "axios": "^1.9.0",
     "bcrypt": "^6.0.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cookie": "^1.0.2",
     "ioredis": "^5.7.0",
@@ -33,12 +32,16 @@
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.62.0",
     "sharp": "^0.32.6",
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5",
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4.1.7",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@next/eslint-plugin-next": "^15.5.0",
     "@types/bcrypt": "^6.0.0",
     "@types/cookie": "^0.6.0",
     "@types/jsonwebtoken": "^9.0.9",
@@ -49,6 +52,8 @@
     "@types/react-dom": "^19",
     "@types/uuid": "^9.0.8",
     "cross-env": "^10.0.0",
+    "eslint": "^9.33.0",
+    "eslint-config-next": "^15.5.0",
     "typescript": "^5"
   }
 }
